add pokemon and search

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,15 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
+    <div class="conteiner">
+      <a href="../src/partials/api-repeta/pakemon.html" class="link"
+        >Repeta pokemon</a
+      >
+      <a href="../src/partials/api-repeta/search-sabmit.html" class="link"
+        >Repeta search sabmit</a
+      >
+    </div>
+
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
   </body>
