add search form Simakov

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,13 @@
       <a href="../src/partials/api-repeta/pakemon.html" class="link"
         >Repeta pokemon</a
       >
+
       <a href="../src/partials/api-repeta/search-sabmit.html" class="link"
         >Repeta search sabmit</a
+      >
+
+      <a href="../src/partials/api-simakov/search-input.html" class="link"
+        >Simakov search input</a
       >
     </div>
 
