--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,10 @@
       <a href="../src/partials/api-simakov/search-input.html" class="link"
         >Simakov search input</a
       >
+
+      <a href="../src/partials/api-rusin/weather.html" class="link"
+        >Weather Rusin</a
+      >
     </div>
 
     <!-- ❗️❗️❗️ Add partials like so for every page -->
