--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,10 @@
       <a href="../src/partials/api-rusin/weather.html" class="link"
         >Weather Rusin</a
       >
+
+      <a href="../src/partials/api-rusin/search-api-rusin.html" class="link"
+        >Search API Rusin</a
+      >
     </div>
 
     <!-- ❗️❗️❗️ Add partials like so for every page -->
